--- a/index.html
+++ b/index.html
@@ -68,7 +68,31 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
-                
+                <div class="home__container container grid">
+                    <img src="assets/img/home-sushi-rolls.png" alt="home image" class="home__img">
+
+                    <div class="home__data">
+                        <h1 class="home__title">
+                            Disfruta Algo Unico
+
+                            <div>
+                                <img src="assets/img/home-sushi-title.png" alt="title image">
+                                Sushi
+                            </div>
+                        </h1>
+
+                        <p class="home__description">
+                            Tentate con nuestros menús y hace mejorar tu día
+                        </p>
+
+                        <a href="#" class="button">
+                            Ordena Ahora <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <img src="assets/img/leaf-branch-2.png" alt="home image" class="home__leaf-1">
+                <img src="assets/img/leaf-branch-4.png" alt="home image" class="home__leaf-2">
             </section>
 
             <!--==================== ABOUT ====================-->
