--- a/index.html
+++ b/index.html
@@ -97,7 +97,26 @@
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
-                
+                <div class="about__container container grid">
+                    <div class="about__data">
+                        <span class="section__subtitle">Sobre Nosotros</span>
+                        <h2 class="section__title about__title">
+                            <div>
+                                Te brindamos
+                                <img src="assets/img/about-sushi-title.png" alt="about image">
+                            </div>
+                                Comida Saludable
+                        </h2>
+
+                        <p class="about__description">
+                            Traemos nuestra cultura a su mesa y deleitamos paladares con nuestros planos. +100 años de metodologias pasadas de generación en generación.
+                        </p>
+                    </div>
+
+                    <img src="assets/img/about-sushi.png" alt="about image" class="about__img">
+                </div>
+
+                <img src="assets/img/leaf-branch-1.png" alt="about image" class="about__leaf">
             </section>
 
             <!--==================== POPULAR ====================-->
