--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                         </li>
 
                         <li class="nav__item">
+                            <a href="#map" class="nav__link">Mapa</a>
+                        </li>
+
+                        <li class="nav__item">
                             <a href="#recently" class="nav__link">Novedades</a>
                         </li>
                     </ul>
@@ -166,6 +170,25 @@
                 </div>
             </section>
 
+             <!--==================== MAP ====================-->
+            <section class="map section" id="map">
+                <div class="map__container container">
+                    <div class="map__content grid">
+                        <div class="map__web">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.9284915350872!2d-2.350740825772531!3d7.3619127926472085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdac9247473b50b%3A0x51cf25229b515ee4!2sBig%20Daddy%20Rd%2C%20Fiapre%2C%20Ghana!5e0!3m2!1ses-419!2sar!4v1690169738636!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" height="250px" class="map__web-item"></iframe>
+                        </div>
+
+                        <div class="map__description">
+                            <span class="section__subtitle">Mapa</span>
+                            <h2 class="section__title">¿Dónde nos unicamos?</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <img src="assets/img/leaf-branch-1.png" alt="map image" class="map__leaf-1">
+                <img src="assets/img/leaf-branch-2.png" alt="map image" class="map__leaf-2">
+            </section>
+
             <!--==================== RECENTLY ====================-->
             <section class="recently section" id="recently">
                 <div class="recently__container container grid">
@@ -224,11 +247,126 @@
 
         <!--==================== FOOTER ====================-->
         <footer class="footer">
-            
+            <div class="footer__container container grid">
+                <div>
+                    <a href="#" class="footer__logo">
+                        <img src="assets/img/logo.png" alt="">
+                        Sushi
+                    </a>
+
+                    <p class="footer__description">
+                        Comida para el cuerpo no <br>
+                        es suficiente. Tiene que <br>
+                        ser comida para el alma.
+                    </p>
+                </div>
+
+                <div class="footer__content">
+                    <div>
+                        <h3 class="footer__title">Pagina Principal</h3>
+
+                        <ul class="footer__links">
+                            <li>
+                                <a href="#home" class="footer__link">Inicio</a>
+                            </li>
+
+                            <li>
+                                <a href="#about" class="footer__link">Sobre Nosotros</a>
+                            </li>
+
+                            <li>
+                                <a href="#popular" class="footer__link">Popular</a>
+                            </li>
+
+                            <li>
+                                <a href="#map" class="footer__link">Mapa</a>
+                            </li>
+
+                            <li>
+                                <a href="#recently" class="footer__link">Novedades</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="footer__title">Información</h3>
+
+                        <ul class="footer__links">
+                            <li>
+                                <a href="#" class="footer__link">Contacto</a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="footer__link">Ordenes y Retiros</a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="footer__link">Videos</a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="footer__link">Reservaciones</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="footer__title">Dirección</h3>
+
+                        <ul class="footer__links">
+                            <li class="footer__information">
+                                Av.Big Dad 1234 <br>
+                                Capital Federal, Argentina
+                            </li>
+
+                            <li class="footer__information">
+                                9AM - 11PM
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="footer__title">Redes Sociales</h3>
+
+                        <ul class="footer__social">
+                            <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                                <i class="ri-facebook-circle-fill"></i>
+                            </a>
+
+                            <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                                <i class="ri-instagram-fill"></i>
+                            </a>
+
+                            <a href="https://www.twitter.com/" target="_blank" class="footer__social-link">
+                                <i class="ri-twitter-fill"></i>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+
+                <img src="assets/img/spring-onion.png" alt="footer image" class="footer__onion">
+                <img src="assets/img/spinach-leaf.png" alt="footer image" class="footer__spinach">
+                <img src="assets/img/leaf-branch-4.png" alt="footer image" class="footer__leaf">
+            </div>
+
+            <div class="footer__info container">
+                <div class="footer__card">
+                    <img src="assets/img/footer-card-1.png" alt="footer image">
+                    <img src="assets/img/footer-card-2.png" alt="footer image">
+                    <img src="assets/img/footer-card-3.png" alt="footer image">
+                    <img src="assets/img/footer-card-4.png" alt="footer image">
+                </div>
+
+                <span class="footer__copy">
+                    &#169; Copyright Ezequiel Mamone. All rights reserved
+                </span>
+            </div>
         </footer>
 
         <!--========== SCROLL UP ==========-->
-
+        <a href="#home" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+        </a>
 
         <!--=============== SCROLLREVEAL ===============-->
         <script src=""></script>
