--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">Inicio</a>
+                            <a href="#home" class="nav__link active-link">Inicio</a>
                         </li>
 
                         <li class="nav__item">
@@ -58,7 +58,7 @@
 
                 <div class="nav__buttons">
                     <!-- Theme change button -->
-                    <!-- <i class="ri-moon-line change-theme" id="theme-button"></i> -->
+                    <i class="ri-moon-line change-theme" id="theme-button"></i>
 
                     <!-- Toggle button -->
                     <div class="nav__toggle" id="nav-toggle">
