--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">
-                            Disfruta Algo Unico
+                           Algo Unico
 
                             <div>
                                 <img src="assets/img/home-sushi-title.png" alt="title image">
@@ -180,7 +180,7 @@
 
                         <div class="map__description">
                             <span class="section__subtitle">Mapa</span>
-                            <h2 class="section__title">¿Dónde nos unicamos?</h2>
+                            <h2 class="section__title">¿Dónde nos ubicamos?</h2>
                         </div>
                     </div>
                 </div>
@@ -369,7 +369,7 @@
         </a>
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src=""></script>
+        <script src="assets/js/scrollreveal.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
