--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </h2>
 
                         <p class="about__description">
-                            Traemos nuestra cultura a su mesa y deleitamos paladares con nuestros planos. +100 años de metodologias pasadas de generación en generación.
+                            Traemos nuestra cultura a su mesa y deleitamos paladares con nuestros platos. +100 años de metodologias pasadas de generación en generación.
                         </p>
                     </div>
 
