--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             Tentate con nuestros menús y hace mejorar tu día
                         </p>
 
-                        <a href="#" class="button">
+                        <a href="#home" class="button">
                             Ordena Ahora <i class="ri-arrow-right-line"></i>
                         </a>
                     </div>
