--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                         <span class="popular__price">$2.000</span>
 
-                        <button class="popular__button">
+                        <button onclick="shop()" class="popular__button">
                             <i class="ri-shopping-bag-line"></i>
                         </button>
                     </article>
@@ -163,7 +163,7 @@
 
                         <span class="popular__price">$2.200</span>
 
-                        <button class="popular__button">
+                        <button onclick="shop()" class="popular__button">
                             <i class="ri-shopping-bag-line"></i>
                         </button>
                     </article>
